--- a/intel-chatbot-frontend/public/index.html
+++ b/intel-chatbot-frontend/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOsYleFVmwemndez8SSX4shHDJ3Bhvtlo&libraries=places"
+      async
+      defer
+    ></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
